# Obsidian-Notes

./: .gitignore  CoT、ToT、GoT.md  DeepSpeed与模型微调显存估算技术解析.md  MoE混合专家模型技术解析.md  Prompt_Engineering技巧要点.md  RAG项目.md  RoPE.md  ToDo.md  leetcode.md  main.py  pyproject.toml  rag_system_review.md  vLLM与PageAttention加速技术解析.md  大模型对齐算法解析_PPO_DPO_DRPO等对比.md  大模型监督微调_SFT_技术解析.md  大模型结构化输出技术解析.md  技术八股.md  杂七杂八技术.md  问题列表.md  面试问题答案.md
.agent/workflows/: note-polisher.md
.obsidian/: app.json  appearance.json
.obsidian/plugins/obsidian-git/: data.json
Agent系统/: 00_Agent系统全景报告.md  00_Agent系统概要.md  02_Agent技术报告.md  03_Agent评测体系设计.md  04_Agent模型后训练SFT_DPO.md
Agent系统/01_技术栈/: Function_Calling与工具箱.md  LangChain.md  LangGraph.md  Memory机制与向量库接入.md  主流Agent框架对比.md
Agent系统/code/: README.md  api.py  config.py  eval_system.py  evaluation.py  graph.py  main.py  multi_agent.py  nodes.py  rag.py  state.py  tools.py  visualize.py
Agent系统/code/training/: README.md  clean_data.py  generate_sft_data.py  prepare_dpo_data.py  train_dpo.py  train_sft.py
Agent系统/code/training_llamafactory/: run_pipeline.sh
RAG系统/: 00_RAG系统概要.md  02_评测系统.md  03_Embedding与Reranker微调全流程.md  04_防幻觉机制.md
RAG系统/01_技术栈/: Celery.md  Elasticsearch.md  FastAPI.md  Kafka.md  Milvus.md  Pydantic.md  Redis.md
RAG系统/code/: RAG系统代码总结.md  docker-compose.yml  run_demo.py
RAG系统/code/.serena/: project.yml
RAG系统/code/api/: app.py  dependencies.py  routes.py
RAG系统/code/cache/: redis_cache.py
RAG系统/code/config/: settings.py
RAG系统/code/core/: abstractions.py  algorithms.py
RAG系统/code/data/: sample_documents.py
(+41 files in other folders)
