[project]
name = "obsidian-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "deepeval>=3.9.1",
    "elasticsearch>=8.0.0,<9.0.0",
    "google-genai>=1.64.0",
    "grandalf>=0.8",
    "kafka-python-ng>=2.2.3",
    "langgraph>=1.1.2",
    "langsmith>=0.7.20",
    "peft>=0.18.1",
    "postgres>=4.0",
    "psycopg[binary]>=3.3.3",
    "ragas>=0.4.3",
    "sentence-transformers>=5.3.0",
    "trl>=1.1.0",
    "uvicorn>=0.41.0",
]
